--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     justify-content: space-between;
     height: 75px;
     width: 100%;
-    max-width: 1300px;
+    max-width: 1600px;
     margin: 0 auto;
     padding: 1 50px;
 }
@@ -44,4 +44,36 @@
     cursor: pointer;
     text-decoration: none;
     font-size: 2.5rem;
+}
+
+.fa-flash
+{
+    margin-right: 0.5rem;
+}
+
+.navbar__menu
+{
+    background: red;
+    display: flex;
+    align-items: center;
+    list-style: none;
+    text-align: center;
+}
+
+.navbar__items
+{
+    background: green;
+    height: 80px;
+}
+
+.navbar__links
+{
+    background: magenta;
+    color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    padding: 0 1rem;
+    height: 100%;
 }
